<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>your_rospkg_name_here</name>
  <version>0.1.0</version>
  <description>
    ROS2 package using rclnodejs, TypeScript (javascript) and node.js
  </description>
  <maintainer email="johnsmith@gmail.com">John Smith</maintainer>
  <license>MIT</license>

  <url type="website">https://github.com/yourproject#readme</url>
  <url type="repository">https://github.com/yourproject</url>
  <url type="bugtracker">https://github.com/yourproject/issues</url>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
