<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rplidar_ros_rclnodejs</name>
  <version>0.1.0</version>
  <description>
    ROS2 package that integrates 2D RPLidar A1-A3 devices using rclnodejs, TypeScript (javascript) and node.js
  </description>
  <maintainer email="wayneparrott@gmail.com">Wayne Parrott</maintainer>
  <license>MIT</license>

  <url type="website">https://github.com/wayneparrott/rplidar-ros-rclnodejs#readme</url>
  <url type="repository">https://github.com/wayneparrott/rplidar-driver</url>
  <url type="bugtracker">https://github.com/wayneparrott/rplidar-ros-rclnodejs/issues</url>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
